fix large archive jump on reload, fix drag drop hover arrow

--- a/src/styles/components/_archive.scss
+++ b/src/styles/components/_archive.scss
@@ -21,7 +21,7 @@
 .archive {
   &__container {
     position: absolute;
-    top: -200px;
+    top: -1000px;
     left: 110px;
     z-index: 1000;
     background-color: var(--background-archive);
